--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,7 @@ input[type="submit"] {
     background-color: rgb(41, 41, 41);
     color: rgb(222, 222, 222);
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 20px;
     height: 40px;
     width: 150px;
     border: 1px solid rgb(174, 174, 174);
